Mon Apr 12 06:53:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/compiler.html
        * TAO_IDL/be/be_global.cpp
        * TAO_IDL/be/be_visitor_component/context_svh.cpp
        * TAO_IDL/be/be_visitor_component/context_svs.cpp
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp
        * TAO_IDL/be/be_visitor_component_scope.cpp
        * TAO_IDL/be/be_visitor_interface/interface_sh.cpp
        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp
        * TAO_IDL/be_include/be_global.h
        * TAO_IDL/be_include/be_visitor_component_scope.h
          Removed support for static configuration and ciao specific
          ccm event extensions which are not used anymore

Fri Apr  9 14:33:23 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_argument/post_upcall_ss.cpp:
        * TAO_IDL/be/be_visitor_argument/paramlist.cpp:
        * TAO_IDL/be_include/be_visitor_argument/post_upcall_ss.h:
        * TAO_IDL/be_include/be_visitor_argument/paramlist.h:

          Removed these unused visitors.

        * TAO_IDL/be/be_visitor_argument.cpp:
        * TAO_IDL/be_include/be_visitor_argument.h:

          Removed includes of the above visitor files.

        * TAO_IDL/be_include/be_codegen.h:

          Removed unused context state value.

        * TAO_IDL/be/be_visitor_argument/invoke_cs.cpp:
        * TAO_IDL/be/be_visitor_argument/upcall_ss.cpp:
        * TAO_IDL/be/be_visitor_argument/vardecl_ss.cpp:
        * TAO_IDL/be/be_visitor_argument/marshal_ss.cpp:
        * TAO_IDL/be/be_visitor_operation/rettype_return_cs.cpp:
        * TAO_IDL/be/be_visitor_operation/rettype.cpp:
        * TAO_IDL/be/be_visitor_operation/argument.cpp:
        * TAO_IDL/be/be_visitor_operation/argument_marshal.cpp:
        * TAO_IDL/be/be_visitor_operation/argument_invoke.cpp:

          Code consolidation and cleanup.
